fix largeur componant collapse

--- a/src/pages/Apropos.scss
+++ b/src/pages/Apropos.scss
@@ -1,7 +1,7 @@
 .collapse-container {
   display: flex;
   flex-direction: column;
-  max-width: 1023px; 
+  align-items: center;
   margin: auto; 
   padding-top: 38px; 
   padding-bottom: 38px; 
