--- a/src/pages/Logement.css
+++ b/src/pages/Logement.css
@@ -37,6 +37,7 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  padding-bottom: 50px;
 }
 
 .topBar {
